--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
@@ -36,7 +35,10 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ] 
+    ]
   },
-  "homepage": "https://choisungrim.github.io/portfolio.io"
+  "homepage": "https://choisungrim.github.io/choisungrim.io/",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
